--- a/app/src/main/res/xml/activity_main_scene.xml
+++ b/app/src/main/res/xml/activity_main_scene.xml
@@ -2,7 +2,7 @@
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ConstraintSet android:id="@+id/start">
+    <ConstraintSet android:id="@+id/start_main">
         <Constraint
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
@@ -16,13 +16,12 @@
             android:id="@+id/animated_movie_item"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:alpha="0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </ConstraintSet>
 
-    <ConstraintSet android:id="@+id/end">
+    <ConstraintSet android:id="@+id/end_main">
         <Constraint
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
@@ -34,9 +33,9 @@
     </ConstraintSet>
 
     <Transition
-        android:id="@+id/transition_start"
-        app:constraintSetEnd="@id/end"
-        app:constraintSetStart="@+id/start"
+        android:id="@+id/transition_main"
+        app:constraintSetEnd="@id/end_main"
+        app:constraintSetStart="@+id/start_main"
         app:duration="10" />
 
 </MotionScene>
