--- a/app/src/main/res/xml/animated_movie_item_scene.xml
+++ b/app/src/main/res/xml/animated_movie_item_scene.xml
@@ -2,7 +2,7 @@
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ConstraintSet android:id="@+id/start">
+    <ConstraintSet android:id="@+id/start_animated">
         <Constraint
             android:id="@+id/thumbnail"
             android:layout_width="0dp"
@@ -34,14 +34,13 @@
             app:layout_constraintTop_toTopOf="parent" />
     </ConstraintSet>
 
-    <ConstraintSet android:id="@+id/end">
+    <ConstraintSet android:id="@+id/end_animated">
         <Constraint
             android:id="@+id/thumbnail"
             android:layout_width="0dp"
             android:layout_height="200dp"
             android:scaleX="1.2"
             android:scaleY="1.2"
-            android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -72,8 +71,8 @@
 
     <Transition
         android:id="@+id/animated_movie_item_transition"
-        app:constraintSetEnd="@id/end"
-        app:constraintSetStart="@id/start"
+        app:constraintSetEnd="@id/end_animated"
+        app:constraintSetStart="@id/start_animated"
         app:duration="300">
 
         <KeyFrameSet>
@@ -89,10 +88,10 @@
                 app:motionTarget="@+id/back_arrow" />
 
             <KeyAttribute
+                android:alpha="1"
                 android:scaleX="1.2"
                 android:scaleY="1.2"
                 app:framePosition="80"
-                android:alpha="1"
                 app:motionTarget="@+id/movie_icon" />
 
         </KeyFrameSet>
