--- a/app/src/main/res/layout/animated_movie_item.xml
+++ b/app/src/main/res/layout/animated_movie_item.xml
@@ -8,6 +8,7 @@
         android:layout_height="match_parent"
         app:layoutDescription="@xml/animated_movie_item_scene"
         app:layout_constraintEnd_toEndOf="parent"
+        android:background="@android:color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -40,6 +41,29 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            tools:text="Parasite"
+            app:layout_constraintStart_toStartOf="parent"
+            android:paddingStart="16dp"
+            app:layout_constraintBottom_toBottomOf="@id/thumbnail"/>
+
+        <TextView
+            android:id="@+id/tags"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:textSize="17sp"
+            tools:text="Comedy, Drama, Thriller"
+            app:layout_constraintEnd_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:paddingStart="16dp"
+            app:layout_constraintTop_toBottomOf="@id/title"/>
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </merge>
