Add descrption animation

--- a/app/src/main/res/xml/animated_movie_item_scene.xml
+++ b/app/src/main/res/xml/animated_movie_item_scene.xml
@@ -48,6 +48,16 @@
             android:alpha="0"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title" />
+
+        <Constraint
+            android:id="@+id/description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:alpha="0"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end_animated">
@@ -87,17 +97,26 @@
             android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/movie_icon" />
 
         <Constraint
             android:id="@+id/tags"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title" />
+
+        <Constraint
+            android:id="@+id/description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tags" />
 
     </ConstraintSet>
 
@@ -135,6 +154,11 @@
                 android:alpha="1"
                 app:framePosition="80"
                 app:motionTarget="@+id/tags" />
+
+            <KeyAttribute
+                android:alpha="1"
+                app:framePosition="90"
+                app:motionTarget="@+id/description" />
 
         </KeyFrameSet>
 
