--- a/app/src/main/res/layout/animated_movie_item.xml
+++ b/app/src/main/res/layout/animated_movie_item.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge>
+
     <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/animated_movie_item"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:background="@android:color/black"
         app:layoutDescription="@xml/animated_movie_item_scene"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@android:color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -46,24 +47,35 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingStart="16dp"
             android:textColor="@android:color/white"
             android:textSize="20sp"
-            tools:text="Parasite"
+            app:layout_constraintBottom_toBottomOf="@id/thumbnail"
             app:layout_constraintStart_toStartOf="parent"
-            android:paddingStart="16dp"
-            app:layout_constraintBottom_toBottomOf="@id/thumbnail"/>
+            tools:text="Parasite" />
 
         <TextView
             android:id="@+id/tags"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingStart="16dp"
             android:textColor="@android:color/white"
-            android:textSize="17sp"
-            tools:text="Comedy, Drama, Thriller"
+            android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:paddingStart="16dp"
-            app:layout_constraintTop_toBottomOf="@id/title"/>
+            app:layout_constraintTop_toBottomOf="@id/title"
+            tools:text="Comedy, Drama, Thriller" />
+
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:textColor="@android:color/white"
+            android:textSize="17sp"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tags" />
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </merge>
