activity_main_scene cleanup

--- a/app/src/main/res/layout/animated_movie_item.xml
+++ b/app/src/main/res/layout/animated_movie_item.xml
@@ -8,6 +8,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:background="@android:color/black"
+        android:visibility="gone"
         app:layoutDescription="@xml/animated_movie_item_scene"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
