--- a/app/src/main/res/xml/animated_movie_item_scene.xml
+++ b/app/src/main/res/xml/animated_movie_item_scene.xml
@@ -27,6 +27,8 @@
             android:layout_height="48dp"
             android:layout_marginTop="200dp"
             android:layout_marginEnd="16dp"
+            android:scaleY="0"
+            android:scaleX="0"
             android:alpha="0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1"
