Add margin to movie_item

--- a/app/src/main/res/layout/animated_movie_item.xml
+++ b/app/src/main/res/layout/animated_movie_item.xml
@@ -7,7 +7,7 @@
         android:id="@+id/animated_movie_item"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:background="@android:color/black"
+        android:background="@android:color/white"
         android:visibility="gone"
         app:layoutDescription="@xml/animated_movie_item_scene"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="16dp"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@id/thumbnail"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="16dp"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -72,7 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textSize="17sp"
             android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
