--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -6,6 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="200dp"
     app:cardCornerRadius="4dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
     tools:background="@drawable/parasite">
 
     <LinearLayout
