--- a/app/src/main/res/xml/animated_movie_item_scene.xml
+++ b/app/src/main/res/xml/animated_movie_item_scene.xml
@@ -9,6 +9,9 @@
             android:layout_height="200dp"
             android:scaleX="1"
             android:scaleY="1"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -69,6 +72,9 @@
             android:layout_height="200dp"
             android:scaleX="1.2"
             android:scaleY="1.2"
+            android:layout_marginEnd="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
