--- a/app/src/main/res/xml/animated_movie_item_scene.xml
+++ b/app/src/main/res/xml/animated_movie_item_scene.xml
@@ -9,27 +9,27 @@
             android:layout_height="200dp"
             android:scaleX="1"
             android:scaleY="1"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/one_grid_unit"
+            android:layout_marginStart="@dimen/one_grid_unit"
+            android:layout_marginTop="@dimen/one_grid_unit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
         <Constraint
             android:id="@+id/back_arrow"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="@dimen/four_grid_unit"
+            android:layout_height="@dimen/four_grid_unit"
+            android:layout_marginStart="@dimen/back_arrow_margin_start"
+            android:layout_marginTop="@dimen/two_grid_unit"
             android:alpha="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
         <Constraint
             android:id="@+id/movie_icon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="@dimen/six_grid_unit"
+            android:layout_height="@dimen/six_grid_unit"
             android:layout_marginTop="200dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/two_grid_unit"
             android:scaleY="0"
             android:scaleX="0"
             android:alpha="0"
@@ -58,7 +58,7 @@
             android:id="@+id/description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="@dimen/four_grid_unit"
             android:alpha="0"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -81,19 +81,19 @@
 
         <Constraint
             android:id="@+id/back_arrow"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="@dimen/four_grid_unit"
+            android:layout_height="@dimen/four_grid_unit"
+            android:layout_marginStart="@dimen/one_and_half_grid_unit"
+            android:layout_marginTop="@dimen/two_grid_unit"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Constraint
             android:id="@+id/movie_icon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="@dimen/six_grid_unit"
+            android:layout_height="@dimen/six_grid_unit"
             android:layout_marginTop="200dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/two_grid_unit"
             android:scaleX="1"
             android:scaleY="1"
             app:layout_constraintEnd_toEndOf="parent"
@@ -121,7 +121,7 @@
             android:id="@+id/description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="@dimen/four_grid_unit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tags" />
