--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,18 +14,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
+        android:clipToPadding="false"
+        android:paddingBottom="@dimen/one_grid_unit"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.motion.widget.MotionLayout
-        android:id="@+id/animated_movie_item"
+        android:id="@+id/animated_music_band_item"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:background="@android:color/white"
         android:visibility="gone"
-        app:layoutDescription="@xml/animated_movie_item_scene"
+        app:layoutDescription="@xml/animated_music_band_item_scene"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -37,7 +39,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/parasite" />
+            tools:src="@drawable/camel_mirage" />
 
         <ImageView
             android:id="@+id/back_arrow"
@@ -49,10 +51,9 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/movie_icon"
+            android:id="@+id/discography"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="200dp"
             android:layout_marginEnd="@dimen/two_grid_unit"
             android:src="@drawable/help_icon"
             android:visibility="invisible"
@@ -61,30 +62,34 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="@dimen/two_grid_unit"
+            android:paddingTop="@dimen/one_grid_unit"
+            android:paddingEnd="@dimen/two_grid_unit"
             android:textColor="@android:color/black"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@id/thumbnail"
             app:layout_constraintStart_toStartOf="parent"
-            tools:text="Parasite" />
+            tools:text="Camel" />
 
         <TextView
             android:id="@+id/tags"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="@dimen/two_grid_unit"
+            android:paddingTop="@dimen/one_grid_unit"
+            android:paddingEnd="@dimen/two_grid_unit"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title"
-            tools:text="Comedy, Drama, Thriller" />
+            app:layout_constraintTop_toBottomOf="@id/name"
+            tools:text="Progressive Rock" />
 
         <TextView
-            android:id="@+id/description"
+            android:id="@+id/about"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/two_grid_unit"
