--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:id="@+id/animated_music_band_item"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:background="@android:color/white"
+        android:background="@android:color/holo_orange_dark"
         android:visibility="gone"
         app:layoutDescription="@xml/animated_music_band_item_scene"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +40,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/camel_mirage" />
+
+<!--        <FrameLayout-->
+<!--            android:id="@+id/about_container"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:visibility="gone"-->
+<!--            android:background="@android:color/holo_red_dark"-->
+<!--            tools:ignore="MissingConstraints" />-->
 
         <ImageView
             android:id="@+id/back_arrow"
@@ -89,7 +97,7 @@
             tools:text="Progressive Rock" />
 
         <TextView
-            android:id="@+id/about"
+            android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/two_grid_unit"
