--- a/app/src/main/res/xml/animated_music_band_item_scene.xml
+++ b/app/src/main/res/xml/animated_music_band_item_scene.xml
@@ -2,7 +2,7 @@
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ConstraintSet android:id="@+id/start_animated">
+    <ConstraintSet android:id="@+id/start">
         <Constraint
             android:id="@+id/thumbnail"
             android:layout_width="0dp"
@@ -55,7 +55,7 @@
             app:layout_constraintTop_toBottomOf="@id/name" />
 
         <Constraint
-            android:id="@+id/about"
+            android:id="@+id/description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/four_grid_unit"
@@ -63,23 +63,34 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
     </ConstraintSet>
 
-    <ConstraintSet android:id="@+id/end_animated">
+    <ConstraintSet android:id="@+id/middle">
 
         <Constraint
             android:id="@+id/thumbnail"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="0dp"
             android:scaleX="1.2"
             android:scaleY="1.2"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginTop="0dp"
             app:layout_constraintDimensionRatio="16:9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <!--        <Constraint-->
+        <!--            android:id="@+id/about_container"-->
+        <!--            android:layout_width="0dp"-->
+        <!--            android:layout_height="0dp"-->
+        <!--            android:visibility="gone"-->
+        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toTopOf="parent" />-->
 
         <Constraint
             android:id="@+id/back_arrow"
@@ -119,7 +130,7 @@
             app:layout_constraintTop_toBottomOf="@id/name" />
 
         <Constraint
-            android:id="@+id/about"
+            android:id="@+id/description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/four_grid_unit"
@@ -129,10 +140,37 @@
 
     </ConstraintSet>
 
+    <ConstraintSet android:id="@+id/end">
+
+        <Constraint android:id="@+id/thumbnail">
+            <PropertySet android:alpha="0" />
+        </Constraint>
+
+        <!--        <Constraint-->
+        <!--            android:id="@+id/about_container"-->
+        <!--            android:layout_width="0dp"-->
+        <!--            android:layout_height="0dp"-->
+        <!--            android:alpha="1"-->
+        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+        <Constraint
+            android:id="@+id/discography"
+            android:layout_width="@dimen/six_grid_unit"
+            android:layout_height="@dimen/six_grid_unit"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </ConstraintSet>
+
     <Transition
-        android:id="@+id/animated_music_band_item_transition"
-        app:constraintSetEnd="@id/end_animated"
-        app:constraintSetStart="@id/start_animated"
+        android:id="@+id/start_to_middle"
+        app:constraintSetEnd="@id/middle"
+        app:constraintSetStart="@id/start"
         app:duration="300">
 
         <KeyFrameSet>
@@ -167,7 +205,49 @@
             <KeyAttribute
                 android:alpha="1"
                 app:framePosition="90"
-                app:motionTarget="@+id/about" />
+                app:motionTarget="@+id/description" />
+
+        </KeyFrameSet>
+
+    </Transition>
+
+    <Transition
+        android:id="@+id/middle_to_end"
+        app:constraintSetEnd="@id/end"
+        app:constraintSetStart="@id/middle"
+        app:duration="300">
+
+        <OnClick
+            app:clickAction="toggle"
+            app:targetId="@+id/discography" />
+
+        <KeyFrameSet>
+
+            <KeyPosition
+                app:framePosition="15"
+                app:keyPositionType="parentRelative"
+                app:motionTarget="@+id/discography"
+                app:percentX="0.65"
+                app:percentY="0.4" />
+
+            <KeyPosition
+                app:framePosition="50"
+                app:keyPositionType="parentRelative"
+                app:motionTarget="@+id/discography"
+                app:percentX="0.5"
+                app:percentY="0.5" />
+
+            <!--            <KeyPosition-->
+            <!--                app:framePosition="0"-->
+            <!--                app:keyPositionType="parentRelative"-->
+            <!--                app:motionTarget="@+id/about_container"-->
+            <!--                app:percentX="0.5"-->
+            <!--                app:percentY="0.5" />-->
+
+            <!--            <KeyAttribute-->
+            <!--                android:alpha="1"-->
+            <!--                app:framePosition="20"-->
+            <!--                app:motionTarget="@+id/about_container" />-->
 
         </KeyFrameSet>
 
