--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,8 @@
     <dimen name="four_grid_unit">32dp</dimen>
     <dimen name="five_grid_unit">40dp</dimen>
     <dimen name="six_grid_unit">48dp</dimen>
+    <dimen name="seven_grid_unit">56dp</dimen>
+    <dimen name="eight_grid_unit">64dp</dimen>
 
     <dimen name="back_arrow_margin_start">50dp</dimen>
 </resources>
