--- a/app/src/main/res/xml/animated_music_band_item_scene.xml
+++ b/app/src/main/res/xml/animated_music_band_item_scene.xml
@@ -2,30 +2,67 @@
 <MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ConstraintSet android:id="@+id/start">
-        <Constraint
-            android:id="@+id/thumbnail"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="@dimen/one_grid_unit"
-            android:layout_marginTop="@dimen/one_grid_unit"
-            android:layout_marginEnd="@dimen/one_grid_unit"
-            android:scaleX="1"
-            android:scaleY="1"
-            app:layout_constraintDimensionRatio="16:9"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <ConstraintSet android:id="@+id/first_set">
+        <Constraint android:id="@id/thumbnail">
+            <Layout
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="@dimen/one_grid_unit"
+                android:layout_marginTop="@dimen/one_grid_unit"
+                android:layout_marginEnd="@dimen/one_grid_unit"
+                app:layout_constraintDimensionRatio="16:9"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <Constraint
-            android:id="@+id/back_arrow"
-            android:layout_width="@dimen/four_grid_unit"
-            android:layout_height="@dimen/four_grid_unit"
-            android:layout_marginStart="@dimen/back_arrow_margin_start"
-            android:layout_marginTop="@dimen/two_grid_unit"
-            android:alpha="0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <Transform
+                android:scaleX="1"
+                android:scaleY="1" />
+        </Constraint>
+
+        <Constraint android:id="@id/back_arrow">
+            <Layout
+                android:layout_width="@dimen/four_grid_unit"
+                android:layout_height="@dimen/four_grid_unit"
+                android:layout_marginStart="@dimen/back_arrow_margin_start"
+                android:layout_marginTop="@dimen/two_grid_unit"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <PropertySet
+                android:alpha="0"
+                android:visibility="invisible" />
+        </Constraint>
+    </ConstraintSet>
+
+    <ConstraintSet android:id="@+id/second_set">
+        <Constraint android:id="@id/thumbnail">
+            <Layout
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="0dp"
+                app:layout_constraintDimensionRatio="16:9"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Transform
+                android:scaleX="1.2"
+                android:scaleY="1.2" />
+        </Constraint>
+
+        <Constraint android:id="@id/back_arrow">
+            <Layout
+                android:layout_width="@dimen/four_grid_unit"
+                android:layout_height="@dimen/four_grid_unit"
+                android:layout_marginStart="@dimen/back_arrow_margin_start"
+                android:layout_marginTop="@dimen/two_grid_unit"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <PropertySet android:alpha="0" />
+
+        </Constraint>
 
         <Constraint
             android:id="@+id/discography"
@@ -66,43 +103,49 @@
 
     </ConstraintSet>
 
-    <ConstraintSet android:id="@+id/middle">
+    <ConstraintSet android:id="@+id/third_set">
+
+        <Constraint android:id="@id/thumbnail">
+            <Layout
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginEnd="0dp"
+                app:layout_constraintDimensionRatio="16:9"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Transform
+                android:scaleX="1.2"
+                android:scaleY="1.2" />
+        </Constraint>
 
         <Constraint
-            android:id="@+id/thumbnail"
+            android:id="@id/about_container"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginEnd="0dp"
-            android:scaleX="1.2"
-            android:scaleY="1.2"
-            app:layout_constraintDimensionRatio="16:9"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Constraint
-            android:id="@+id/about_container"
-            android:layout_width="1dp"
-            android:layout_height="1dp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Constraint
-            android:id="@+id/back_arrow"
-            android:layout_width="@dimen/four_grid_unit"
-            android:layout_height="@dimen/four_grid_unit"
-            android:layout_marginStart="@dimen/one_and_half_grid_unit"
-            android:layout_marginTop="@dimen/two_grid_unit"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <Constraint android:id="@id/back_arrow">
+            <Layout
+                android:layout_width="@dimen/four_grid_unit"
+                android:layout_height="@dimen/four_grid_unit"
+                android:layout_marginStart="@dimen/two_grid_unit"
+                android:layout_marginTop="@dimen/two_grid_unit"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <PropertySet android:alpha="1" />
+
+        </Constraint>
 
         <Constraint
-            android:id="@+id/discography"
+            android:id="@id/discography"
             android:layout_width="@dimen/six_grid_unit"
             android:layout_height="@dimen/six_grid_unit"
             android:layout_marginEnd="@dimen/two_grid_unit"
@@ -112,11 +155,11 @@
             app:layout_constraintHorizontal_bias="1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
-            <Motion app:transitionEasing="accelerate" />
+            <Motion app:pathMotionArc="startHorizontal" />
         </Constraint>
 
         <Constraint
-            android:id="@+id/name"
+            android:id="@id/name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
@@ -124,7 +167,7 @@
             app:layout_constraintTop_toBottomOf="@id/discography" />
 
         <Constraint
-            android:id="@+id/tags"
+            android:id="@id/tags"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
@@ -132,7 +175,7 @@
             app:layout_constraintTop_toBottomOf="@id/name" />
 
         <Constraint
-            android:id="@+id/description"
+            android:id="@id/description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/four_grid_unit"
@@ -142,42 +185,115 @@
 
     </ConstraintSet>
 
-    <ConstraintSet android:id="@+id/end">
+    <ConstraintSet
+        android:id="@+id/fourth_set"
+        app:deriveConstraintsFrom="@id/third_set">
 
         <Constraint android:id="@+id/thumbnail">
             <PropertySet android:alpha="0" />
         </Constraint>
 
-        <!--        <Constraint-->
-        <!--            android:id="@+id/about_container"-->
-        <!--            android:layout_width="0dp"-->
-        <!--            android:layout_height="0dp"-->
-        <!--            android:alpha="1"-->
-        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--            app:layout_constraintEnd_toEndOf="parent"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toTopOf="parent" />-->
+        <Constraint android:id="@+id/back_arrow">
+            <PropertySet android:alpha="0" />
+        </Constraint>
+
+        <Constraint android:id="@+id/name">
+            <PropertySet android:alpha="0" />
+        </Constraint>
+
+        <Constraint android:id="@+id/tags">
+            <PropertySet android:alpha="0" />
+        </Constraint>
+
+        <Constraint android:id="@+id/description">
+            <PropertySet android:alpha="0" />
+        </Constraint>
 
         <Constraint
             android:id="@+id/discography"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="@dimen/six_grid_unit"
+            android:layout_height="@dimen/six_grid_unit"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+            <Motion app:pathMotionArc="startVertical" />
+            <PropertySet android:alpha="1" />
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/about_container"
+            android:layout_width="1dp"
+            android:layout_height="1dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+            <CustomAttribute
+                app:attributeName="radius"
+                app:customDimension="@dimen/seven_grid_unit" />
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/about_text"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/six_grid_unit"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/discography" />
 
     </ConstraintSet>
 
-    <Transition
-        android:id="@+id/start_to_middle"
-        app:constraintSetEnd="@id/middle"
-        app:constraintSetStart="@id/start"
-        app:duration="300">
+    <ConstraintSet
+        android:id="@+id/fifth_set"
+        app:deriveConstraintsFrom="@id/fourth_set">
+        <Constraint
+            android:id="@+id/discography"
+            android:layout_width="@dimen/six_grid_unit"
+            android:layout_height="@dimen/six_grid_unit"
+            android:layout_marginTop="@dimen/two_grid_unit"
+            android:layout_marginEnd="@dimen/two_grid_unit"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+            <Motion app:pathMotionArc="startHorizontal" />
+            <PropertySet android:alpha="1" />
+        </Constraint>
 
-        <OnClick
-            app:clickAction="toggle"
-            app:targetId="@+id/back_arrow" />
+        <Constraint
+            android:id="@+id/about_container"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:alpha="1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <CustomAttribute
+                app:attributeName="radius"
+                app:customDimension="0dp" />
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/about_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/two_grid_unit"
+            android:alpha="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/discography" />
+    </ConstraintSet>
+
+    <Transition
+        android:id="@+id/first_to_second_transition"
+        app:constraintSetEnd="@id/second_set"
+        app:constraintSetStart="@id/first_set"
+        app:duration="300">
 
         <KeyFrameSet>
             <KeyAttribute
@@ -185,47 +301,57 @@
                 android:scaleY="1.2"
                 app:framePosition="80"
                 app:motionTarget="@+id/thumbnail" />
-
-            <KeyAttribute
-                android:alpha="1"
-                app:framePosition="80"
-                app:motionTarget="@+id/back_arrow" />
-
-            <KeyAttribute
-                android:alpha="1"
-                android:scaleX="1.2"
-                android:scaleY="1.2"
-                app:framePosition="80"
-                app:motionTarget="@+id/discography" />
-
-            <KeyAttribute
-                android:alpha="1"
-                app:framePosition="80"
-                app:motionTarget="@+id/name" />
-
-            <KeyAttribute
-                android:alpha="1"
-                app:framePosition="80"
-                app:motionTarget="@+id/tags" />
-
-            <KeyAttribute
-                android:alpha="1"
-                app:framePosition="90"
-                app:motionTarget="@+id/description" />
-
         </KeyFrameSet>
 
     </Transition>
 
     <Transition
-        android:id="@+id/middle_to_end"
-        app:constraintSetEnd="@id/end"
-        app:constraintSetStart="@id/middle"
+        android:id="@+id/second_to_third_transition"
+        app:constraintSetEnd="@id/third_set"
+        app:constraintSetStart="@id/second_set"
+        app:duration="200">
+
+        <OnClick
+            app:clickAction="toggle"
+            app:targetId="@+id/back_arrow" />
+
+        <KeyFrameSet>
+            <KeyAttribute
+                android:alpha="1"
+                android:scaleX="1.2"
+                android:scaleY="1.2"
+                app:framePosition="50"
+                app:motionTarget="@id/discography" />
+        </KeyFrameSet>
+
+    </Transition>
+
+    <Transition
+        android:id="@+id/third_to_fourth_transition"
+        app:constraintSetEnd="@id/third_set"
+        app:constraintSetStart="@id/fourth_set"
+        app:duration="300">
+        <OnClick
+            app:clickAction="toggle"
+            app:targetId="@+id/discography" />
+    </Transition>
+
+    <Transition
+        android:id="@+id/fourth_to_fifth_transition"
+        app:constraintSetEnd="@id/fourth_set"
+        app:constraintSetStart="@id/fifth_set"
         app:duration="500">
 
         <OnClick
             app:clickAction="toggle"
             app:targetId="@+id/discography" />
+
+        <KeyFrameSet>
+            <KeyAttribute
+                android:alpha="0"
+                app:framePosition="30"
+                app:motionTarget="@+id/about_text" />
+        </KeyFrameSet>
 
     </Transition>
 
