--- a/app/src/main/res/xml/animated_music_band_item_scene.xml
+++ b/app/src/main/res/xml/animated_music_band_item_scene.xml
@@ -183,11 +183,34 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tags" />
 
+        <Constraint
+            android:id="@+id/about_container"
+            android:layout_width="1dp"
+            android:layout_height="1dp"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">>
+            <CustomAttribute
+                app:attributeName="radius"
+                app:customDimension="@dimen/seven_grid_unit" />
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/about_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/six_grid_unit"
+            android:visibility="invisible"
+            app:layout_constraintStart_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/discography" />
+
     </ConstraintSet>
 
     <ConstraintSet
         android:id="@+id/fourth_set"
-        app:deriveConstraintsFrom="@id/third_set">
+        app:deriveConstraintsFrom="@id/second_set">
 
         <Constraint android:id="@+id/thumbnail">
             <PropertySet android:alpha="0" />
@@ -213,53 +236,10 @@
             android:id="@+id/discography"
             android:layout_width="@dimen/six_grid_unit"
             android:layout_height="@dimen/six_grid_unit"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-            <Motion app:pathMotionArc="startVertical" />
-            <PropertySet android:alpha="1" />
-        </Constraint>
-
-        <Constraint
-            android:id="@+id/about_container"
-            android:layout_width="1dp"
-            android:layout_height="1dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-            <CustomAttribute
-                app:attributeName="radius"
-                app:customDimension="@dimen/seven_grid_unit" />
-        </Constraint>
-
-        <Constraint
-            android:id="@+id/about_text"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="@dimen/six_grid_unit"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/discography" />
-
-    </ConstraintSet>
-
-    <ConstraintSet
-        android:id="@+id/fifth_set"
-        app:deriveConstraintsFrom="@id/fourth_set">
-        <Constraint
-            android:id="@+id/discography"
-            android:layout_width="@dimen/six_grid_unit"
-            android:layout_height="@dimen/six_grid_unit"
             android:layout_marginTop="@dimen/two_grid_unit"
             android:layout_marginEnd="@dimen/two_grid_unit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
-            <Motion app:pathMotionArc="startHorizontal" />
             <PropertySet android:alpha="1" />
         </Constraint>
 
@@ -287,6 +267,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/discography" />
+
     </ConstraintSet>
 
     <Transition
@@ -330,18 +311,8 @@
         android:id="@+id/third_to_fourth_transition"
         app:constraintSetEnd="@id/fourth_set"
         app:constraintSetStart="@id/third_set"
-        app:duration="300">
-        <OnClick
-            app:clickAction="toggle"
-            app:targetId="@+id/discography" />
-    </Transition>
-
-    <Transition
-        android:id="@+id/fourth_to_fifth_transition"
-        app:constraintSetEnd="@id/fifth_set"
-        app:constraintSetStart="@id/fourth_set"
+        app:motionInterpolator="easeOut"
         app:duration="500">
-
         <OnClick
             app:clickAction="toggle"
             app:targetId="@+id/discography" />
@@ -349,10 +320,24 @@
         <KeyFrameSet>
             <KeyAttribute
                 android:alpha="0"
-                app:framePosition="30"
+                app:framePosition="20"
                 app:motionTarget="@+id/about_text" />
-        </KeyFrameSet>
 
+            <KeyAttribute
+                android:alpha="0"
+                app:framePosition="10"
+                app:motionTarget="@id/name" />
+
+            <KeyAttribute
+                android:alpha="0"
+                app:framePosition="10"
+                app:motionTarget="@id/tags" />
+
+            <KeyAttribute
+                android:alpha="0"
+                app:framePosition="10"
+                app:motionTarget="@id/description" />
+        </KeyFrameSet>
     </Transition>
 
 </MotionScene>
