--- a/app/src/main/res/layout/music_band_item.xml
+++ b/app/src/main/res/layout/music_band_item.xml
@@ -8,14 +8,12 @@
     android:layout_marginStart="@dimen/one_grid_unit"
     android:layout_marginTop="@dimen/one_grid_unit"
     android:layout_marginEnd="@dimen/one_grid_unit"
-    app:cardCornerRadius="@dimen/half_grid_unit"
-    tools:background="@drawable/camel_mirage">
+    app:cardCornerRadius="@dimen/half_grid_unit">
 
     <ImageView
         android:id="@+id/cover"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="16:9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,29 +23,28 @@
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/two_grid_unit"
-        android:paddingEnd="@dimen/two_grid_unit"
+        android:paddingTop="@dimen/one_grid_unit"
         android:paddingBottom="@dimen/one_grid_unit"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@id/tags"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cover"
         tools:text="Camel" />
 
     <TextView
         android:id="@+id/tags"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/two_grid_unit"
-        android:paddingEnd="@dimen/two_grid_unit"
         android:paddingBottom="@dimen/one_grid_unit"
-        android:textColor="@android:color/white"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/name"
         tools:text="Progressive Rock" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
