Change about text alpha frame position value

--- a/app/src/main/res/xml/animated_music_band_item_scene.xml
+++ b/app/src/main/res/xml/animated_music_band_item_scene.xml
@@ -325,8 +325,13 @@
         <KeyFrameSet>
             <KeyAttribute
                 android:alpha="0"
-                app:framePosition="20"
-                app:motionTarget="@+id/about_text" />
+                app:framePosition="70"
+                app:motionTarget="@id/about_text" />
+
+            <KeyAttribute
+                android:alpha="0"
+                app:framePosition="50"
+                app:motionTarget="@id/back_arrow" />
 
             <KeyAttribute
                 android:alpha="0"
